# impri

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  server.json  smithery.yaml
cli/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/src/: cli.ts  client-factory.ts  config.ts  output.ts
cli/tests/: commands.test.ts  config.test.ts
deploy/: .env.example  Caddyfile  README.md  backup.sh  docker-compose.prod.yml  fly-backup.sh  impri-backup.service  impri-backup.timer
docker/: entrypoint.sh  litestream.yml  server.Dockerfile
docs/: account-recovery.md  add-a-kill-switch-to-your-ai-agent.md  api-keys.md  approval-gate-for-overnight-ai-agents.md  approve-ai-agent-actions-from-slack.md  approve-ai-agent-payments-and-charges.md  approve-ai-generated-content-before-publishing.md  approve-database-writes-from-an-ai-agent.md  approve-emails-before-your-ai-agent-sends-them.md  approve-refunds-issued-by-an-ai-support-agent.md  approve-slack-messages-from-an-ai-agent.md  audit-log.md  billing.md  claude-agent-sdk.md  cli.md  cookbook.md  discord-approval.md  gate-a-cron-job-with-human-approval.md  gdpr.md  how-to-add-human-approval-to-an-ai-agent.md  how-to-build-a-human-in-the-loop-ai-agent.md  human-approval-autogen-agents.md  human-approval-before-an-agent-deletes-data.md  human-approval-before-an-agent-posts-to-social-media.md  human-approval-before-an-agent-sends-sms.md  human-approval-before-deploying-code-with-an-agent.md  human-approval-claude-agent-sdk.md  human-approval-for-ai-sales-outreach.md  human-approval-for-crewai-agents.md  human-approval-for-multi-agent-systems.md  human-approval-for-scheduled-ai-scripts.md  human-approval-for-unattended-ai-agents.md  human-approval-n8n-ai-agent.md  human-approval-vercel-ai-sdk.md  human-in-the-loop-for-autonomous-agents.md  human-in-the-loop-for-langchain-agents.md  human-in-the-loop-for-rag-agents-that-act.md  human-in-the-loop-langgraph.md  human-in-the-loop-llamaindex-agents.md  human-in-the-loop-openai-agents-sdk.md  (+22 more)
examples/: README.md  approval-gated-agent.mjs
examples/cookbook/: README.md
integrations/claude-agent-sdk/: README.md  package-lock.json  package.json  tsconfig.json
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/impri_crewai/: __init__.py  _client.py  _exceptions.py  _transport.py  callback.py  tool.py
integrations/crewai/tests/: test_tool.py
integrations/langchain/: README.md  __init__.py  _client.py  (+2 more)
integrations/openai-agents/: README.md  pyproject.toml
integrations/openai-agents/impri_openai/: __init__.py  _client.py  _errors.py  _guardrail.py  _models.py  _webhook.py
integrations/openai-agents/tests/: test_client.py  test_guardrail.py
mcp/: README.md  eslint.config.js  package-lock.json  package.json
scripts/: build-docs.mjs  serve-ui.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/impri/: __init__.py  _transport.py  client.py  errors.py  models.py
sdk/python/tests/: mock_transport.py  test_actions.py  test_audit.py  test_channels.py  test_ergonomics.py  test_presets.py  test_watchers.py  test_webhook.py
server/: eslint.config.mjs  package.json  tsconfig.json
status/: worker.js  wrangler.toml
ui/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
www/: _headers  _redirects  app.js  docs.html  index.html  llms.txt  robots.txt  sitemap.xml  styles.css
(+219 files in other folders)
